--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.284.0",
     "maath": "^0.10.4",
     "next": "13.5.4",
+    "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.4",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "@types/three": "^0.156.0",
