--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-spring/three": "^9.6.1",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.19",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "lucide-react": "^0.284.0",
